--- a/ClotheOurKids.Web/Views/Account/ConfirmEmail.cshtml
+++ b/ClotheOurKids.Web/Views/Account/ConfirmEmail.cshtml
@@ -5,6 +5,6 @@
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Thank you for confirming your email. Please <a data-toggle="modal" data-target="#modal-login">Click Here to Log In</a>
     </p>
 </div>
