Setup Coming Soon Page and Web Deploy
Setup Coming Soon Page and Web Deploy

--- a/ClotheOurKids.Web/Views/Shared/Offline.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/Offline.cshtml
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Clothe Our Kids of Morgan County</title>
 
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/bundles/css")
 
     @Scripts.Render("~/bundles/modernizr")
 
