--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet"> 
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/bundles/css")
     
     @Scripts.Render("~/bundles/modernizr")
      
