Revert Email Service to Gmail. Add Spinner to Login
Revert Email Service to Gmail. Add Spinner to Login

--- a/ClotheOurKids.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ClotheOurKids.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,12 +2,13 @@
     ViewBag.Title = "Forgot Password Confirmation";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
+<div class="container">
+    <h2 class="h2-responsive">Forgot Password Confirmation</h2>
+
     <p>
-        Please check your email to reset your password.
+        Please check your email to reset your password. 
     </p>
+
+
 </div>
 	
