--- a/ClotheOurKids.Web/Views/Account/ForgotPassword.cshtml
+++ b/ClotheOurKids.Web/Views/Account/ForgotPassword.cshtml
@@ -3,26 +3,35 @@
     ViewBag.Title = "Forgot your password?";
 }
 
-<h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+<div class="container">
+    <h2 class="h2-responsive">Forgot Your Password?</h2>
+
+    @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <hr />
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+
+        <div class="row mt-2">
+            <div class="col">
+                <div class="md-form">
+                    <i class="fa fa-envelope prefix"></i>
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control validate" })
+                    @Html.LabelFor(m => m.Email)
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
+
+        <div class="row mt-2 text-center">
+            <div class="col">
+                <input type="submit" value="Reset Password" class="btn btn-primary btn-rounded btn-lg waves-effect waves-light" />
+            </div>
         </div>
-    </div>
-}
+
+    }
+
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
