--- a/ClotheOurKids.Web/Views/Account/Login.cshtml
+++ b/ClotheOurKids.Web/Views/Account/Login.cshtml
@@ -1,60 +1,9 @@
-﻿@using ClotheOurKids.Web.Models
-@model LoginViewModel
+﻿@section customScript
+{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#modal-login').modal('show')
+        });
+    </script>
 
-
-<!-- Modal Login -->
-<div class="modal fade modal-ext" id="modal-login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <!--Content-->
-        <div class="modal-content">
-            <!--Header-->
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h3 class="w-100"><i class="fa fa-user"></i> Login</h3>
-            </div>
-            <!--Body-->
-            <div class="modal-body">
-                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-                    <div class="md-form">
-                        <i class="fa fa-envelope prefix"></i>
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control validate" })
-                        @Html.LabelFor(m => m.Email)
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="md-form">
-                        <i class="fa fa-lock prefix"></i>
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control validate"})
-                        @Html.LabelFor(m => m.Password)
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger"})
-                    </div>
-                    <div class="form-group">
-                        @Html.CheckBoxFor(m => m.RememberMe)
-                        @Html.LabelFor(m => m.RememberMe)
-                    </div>
-                    <div class="text-center">
-                        <input type="submit" class="btn btn-primary btn-lg" value="Log In" />
-                    </div>
-                }   
-            </div>
-            <!--Footer-->
-            <div class="modal-footer">
-                <div class="options text-right">
-                    <p>Not a member? <a href="@Url.Action("Register", "Account")">Register</a></p>
-                    <p>Forgot <a href="#">Password?</a></p>
-                </div>
-                <button type="button" class="btn btn-default ml-auto" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        <!--/.Content-->
-    </div>
-</div>
-
-
-
+}
