Updates to Request Form
Updates to Request Form

--- a/ClotheOurKids.Web/Views/Account/Register.cshtml
+++ b/ClotheOurKids.Web/Views/Account/Register.cshtml
@@ -219,6 +219,7 @@
 
             $('.md-select2 option[value = "0"]').attr('disabled', true);
 
+            $('.md-select2').select2();
             
 
             if (!$('input[type=radio][name=OfficeTypeId]').is(':checked')) {
@@ -281,8 +282,6 @@
             //            .attr("value", key)
             //            .text(value));
             //});
-
-            $('.mdb-select').material_select();
 
         });
     </script>    
